# Rust-ProfanOS

./: README.md
rust-profanos/: Cargo.toml
rust-profanos/.cargo/: config.toml
rust-profanos/src/: lib.rs
rust-profanos/src/libs/: libc.rs  mod.rs  vesa.rs
rust-profanos/src/libs/clibs/: libc.rs  mod.rs
rust-profanos/src/libs/std/: env.rs  fs.rs  mod.rs  process.rs
rust-profanos/src/libs/std/io/: mod.rs
rust-profanos/src/utilities/: mem.rs  mod.rs  screen.rs
template/: .gitignore  Cargo.toml  Makefile  README.md  i386.json  link.ld
template/.cargo/: config.toml
template/src/: entry.rs  main.rs  panichandler.rs
