[package]
name = "rust-profanos-template"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-profanos = { path = "../rust-profanos" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "testrust"
path = "src/main.rs"
test = false
bench = false
doc = false
harness = false
